--- a/TheMovieDatabase/List/Controller/ListViewController.xib
+++ b/TheMovieDatabase/List/Controller/ListViewController.xib
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListViewController" customModule="TheMovieDatabase" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="X0p-Jc-9Ba" id="BTQ-yA-9os"/>
+                <outlet property="scrollTopButton" destination="YoQ-K6-gC0" id="wl3-EC-Z5I"/>
                 <outlet property="searchBar" destination="Z1y-5S-ziV" id="1W7-wv-wpE"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -38,12 +39,25 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <button opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YoQ-K6-gC0">
+                    <rect key="frame" x="359" y="807" width="45" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="45" id="PZH-zI-Nyt"/>
+                        <constraint firstAttribute="width" constant="45" id="XMf-fF-Yy2"/>
+                    </constraints>
+                    <state key="normal" image="scrollTop"/>
+                    <connections>
+                        <action selector="scrollToTop:" destination="-1" eventType="touchUpInside" id="aAj-me-dxn"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="YoQ-K6-gC0" secondAttribute="trailing" constant="10" id="462-tS-IG1"/>
                 <constraint firstItem="Z1y-5S-ziV" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="47Z-h7-s6M"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="X0p-Jc-9Ba" secondAttribute="bottom" id="6OV-om-ni7"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="X0p-Jc-9Ba" secondAttribute="trailing" id="EwP-mk-qFc"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="YoQ-K6-gC0" secondAttribute="bottom" constant="10" id="KCI-Jm-vMr"/>
                 <constraint firstItem="X0p-Jc-9Ba" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="d0w-Sw-MVc"/>
                 <constraint firstItem="X0p-Jc-9Ba" firstAttribute="top" secondItem="Z1y-5S-ziV" secondAttribute="bottom" id="kP5-rK-62p"/>
                 <constraint firstItem="Z1y-5S-ziV" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="oHa-Uq-nVa"/>
@@ -52,4 +66,7 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
     </objects>
+    <resources>
+        <image name="scrollTop" width="70" height="70"/>
+    </resources>
 </document>
